<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="cloud.artik.example.devicemanage.DeviceManagementActivity">

    <TextView
        android:id="@+id/taskapis_region"
        android:text="@string/dm_tasks_instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/readBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="9sp"
            android:text="@string/read_button_txt" />

        <Button
            android:id="@+id/writeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="9sp"
            android:text="@string/write_button_txt" />

        <Space android:layout_width="10dp"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/rebootBtn"
            android:layout_width= "wrap_content"
            android:layout_height="wrap_content"
            android:textSize="9sp"
            android:text="@string/reboot_button_txt" />
    </LinearLayout>
    <TextView
        android:id="@+id/dm_apicall_response"
        android:text="@string/task_apicall_response"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp" />

    <Space android:layout_width="match_parent"
        android:layout_height="5dp"/>

    <View style="@style/Divider"/>
    <Button
        android:id="@+id/getPropertiesBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="9sp"
        android:text="@string/get_property_button_txt" />

    <TextView
        android:id="@+id/get_properties_call_response"
        android:text="@string/properties_from_akc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp" />

</LinearLayout>
